err/colbert.err
Listing '.'...
Listing './bin'...
Compiling './bin/colbert_balance_des_comptes.py'...
Compiling './bin/colbert_balance_des_comptes_to_rst.py'...
Compiling './bin/colbert_bilan.py'...
Compiling './bin/colbert_bilan_to_rst.py'...
Compiling './bin/colbert_calculer_facture.py'...
Compiling './bin/colbert_check_livre_journal.py'...
***   File "./bin/colbert_check_livre_journal.py", line 54
    print '%s\t\t%s' % (row[1], row[0])
                   ^
SyntaxError: invalid syntax

Compiling './bin/colbert_compte_de_resultat.py'...
Compiling './bin/colbert_compte_de_resultat_to_rst.py'...
Compiling './bin/colbert_ecriture_facture.py'...
Compiling './bin/colbert_ecritures_de_cloture.py'...
Compiling './bin/colbert_ecritures_to_livre_journal.py'...
Compiling './bin/colbert_facture_to_tex.py'...
Compiling './bin/colbert_grand_livre.py'...
Compiling './bin/colbert_grand_livre_to_rst.py'...
Compiling './bin/colbert_livre_journal.py'...
***   File "./bin/colbert_livre_journal.py", line 119
    print lines
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/colbert_rapport_activite.py'...
Compiling './bin/colbert_rapport_activite_to_tex.py'...
Compiling './bin/colbert_solde_de_compte.py'...
Compiling './bin/colbert_solder_tva.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Colbert-0.24.egg-info'...
Listing './lib/python3.5/site-packages/colbert'...
Compiling './lib/python3.5/site-packages/colbert/livre_journal.py'...
***   File "./lib/python3.5/site-packages/colbert/livre_journal.py", line 202
    RX_DATE_INTITULE = re.compile(ur"""^\|\|\s
                              (?P<date>\d\d/\d\d/\d\d\d\d)\s+\|\|
                              (?P<numero_compte_debit>\s+)\|\|
                              (?P<numero_compte_credit>\s+)\|\|
                              (?P<intitule>\s.+)\|\|
                              (?P<debit>\s+)\|\|
                              (?P<credit>\s+)\|\s*$""", flags=(re.X | re.U))
                                              
                                                                 
                                                              
                                                               
                                                    
                                                
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
